All tests pass, all seeding scripts succeeded. Had to make some last second API changes- series only contain teamIds for now. Coulnd't figure out a fast and clean way to include the team objects.
