# src/main/kotlin/com/lowbudgetlcs/routes/dto/series/SeriesDto.kt
@@ -3,4 +3,5 @@ package com.lowbudgetlcs.routes.dto.series
 import com.lowbudgetlcs.routes.dto.teams.TeamDto
 import kotlinx.serialization.Serializable
 
-@Serializable data class SeriesDto(val id: Int, val eventId: Int?, val teams: List<TeamDto>)
+@Serializable
+data class SeriesDto(val id: Int, val eventId: Int?, val teamIds: List<Int>)
