# src/main/kotlin/com/lowbudgetlcs/routes/dto/series/SeriesDtoMappers.kt
@@ -2,4 +2,4 @@ package com.lowbudgetlcs.routes.dto.series
 
 import com.lowbudgetlcs.domain.models.Series
 
-fun Series.toDto(): SeriesDto = SeriesDto(id = id.value, eventId = eventId.value, teams = listOf())
+fun Series.toDto(): SeriesDto = SeriesDto(id = id.value, eventId = eventId.value, teamIds = participants.map { it.value })
